alb.tf
resource "aws_alb" "application-lb" {
    provider = aws.region-master
    name = "Jenkins-lb"
    internal = false
    load_balancer_type = "application"
    security_groups = [ aws_security_group.lb-sg.id ]
    subnets = [ aws_subnet.subnet_1.id, aws_subnet.subnet_2.id ]
    tags = {
      "Name" = "Jenkins-LB"
    }
}

resource "aws_lb_target_group" "app-lb-tg" {
    provider = aws.region-master
    name = "app-lb-tg"
    port = var.webserver-port
    target_type = "instance"
    protocol = "HTTP"
    health_check {
      enabled  = true
      interval = 10
      path = "/"
      port = var.webserver-port
      protocol = "HTTP"
      matcher = "200-299"
    }
    tags = {
      "Name" = "jenkins-target-group"
    }
}

resource "aws_lb_listener" "jenkins-listener-http" {
    provider = aws.region-master
    load_balancer_arn = aws_lb.application-lb.arn
    port = "80"
    protocol = "HTTP"
    default_action {
      type = "forward"
      target_group_arn = aws_lb_target_group.app-lb-tg.id
    }
  
}

resource "aws_lb_target_group_attachment" "jenkins-master-attach" {
    provider = aws.region-master
    target_group_arn = aws_lb_target_group.app-lb-tg.arn
    target_id = aws_instance.jenkins-master.id
    port = var.webserver-port
}
